# GnG

./: .env.template  .gitignore  GAMERULES.md  QnA.md  README.md  docker-compose.yml
backend/: Dockerfile  README.md  TESTING.md  pyproject.toml  run_tests.py
backend/migration/: env.py
backend/migration/versions/: 4c8cfa7640fa_change_description_field_to_text_in_.py  74ae5c0a38b9_add_item_image_column_to_items_table.py  78bdfed4addd_create_database_schema_to_match_models.py  a6df11e2692c_merge_heads.py  b1358dbfd957_populate_items_table_with_game_items_.py  bd7196417521_populate_cells_table_with_game_board_.py
backend/pending/: config.py  main.py
backend/pending/routers/: router_scheduler.py  router_tasks.py
backend/src/: config.py  start.py
backend/src/database/postgres/: sql_enums.py
backend/src/database/redis/: base.py
backend/src/routers/: example_router.py  item_router.py
backend/src/schemas/: __init__.py  cell.py  game.py  inventory.py  item.py  item_instance.py  player.py  player_effects.py  player_stats.py  session.py  user.py
backend/src/services/: ITEMS.md  ITEM_LOGIC.md  __init__.py  base_service.py  cell_service.py  dice_service.py  effects_service.py  game_service.py  inventory_service.py  item_instance_service.py  player_service.py  session_service.py  user_service.py
backend/src/utils/: logger.py
backend/tests/: README.md  conftest.py  requirements.txt  test_effects_service.py  test_inventory_service.py  test_item_instance_service.py  test_item_logic_integration.py  test_player_service.py  test_user_service.py
go_back/: .gitignore  (+7 more)
(+87 files in other folders)
