[project]
name = "backend"
version = "0.1.0"
description = "GnG Monopoly"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.14.0",
    "apscheduler>=3.11.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.6",
    "faststream>=0.5.34",
    "graphviz>=0.21",
    "greenlet>=3.1.1",
    "pydantic-settings>=2.7.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-mock>=3.14.1",
    "python-dotenv>=1.0.1",
    "redis>=5.2.1",
    "setuptools>=80.9.0",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.34.0",
]
